# SD2

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: mvp.yaml  openemma.yaml
configs/stress/: frame_drop.yaml  gaussian_noise.yaml  motion_blur.yaml
data/: README.md
data/sample/: clean_run.jsonl  stress_run.jsonl
docs/: recorder_bug_audit.md  sd2_outcome_level_result.md  sd2_pilot_results.md
docs/example/: benchmark_report.md  carla_stress_fingerprint.md  cross_model_comparison.md  (+4 more)
experiments/: _carla_e2e_common.py  aim_record.py  analyze_sample.py  carla_record.py  cilrs_record.py  generate_sample_data.py  generate_sample_images.py  interfuser_record.py  neat_record.py  reasoning_paraphrase_probe.py  run_fault_benchmark.py  run_mvp.py  tcp_record.py  transfuser_record.py
outputs/: README.md
tests/: test_aim_adapter.py  test_anti_crawl_nudger.py  test_benchmark.py  test_calibration.py  test_carla_adapter.py  test_carla_teardown.py  test_cilrs_adapter.py  test_cli.py  test_collision_events.py  test_common_stage_mean.py  test_deviation.py  test_interfuser_adapter.py  test_interfuser_controller_state.py  test_intervention.py  test_location_to_gps.py  test_metrics.py  test_neat_adapter.py  test_pairing.py  test_propagation_diagnosis_fingerprint.py  test_reasoning_ablation.py  test_recorder_flag_matrix.py  test_reports.py  test_robustness_stats.py  test_route_progress_tracker.py  test_schema.py  test_semantic_composite.py  test_sensor_blueprint_config.py  test_sensor_tick.py  test_stressors.py  test_tcp_adapter.py  test_transfuser_adapter.py
(+58 files in other folders)
