[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd2"
version = "0.1.0"
description = "System Deviation Diagnosis for functional-pipeline robustness analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
  "numpy",
  "pyyaml",
  "matplotlib",
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
sd2 = "sd2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
